manifests/ingress-with-certmanager.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: example
 annotations:
   cert-manager.io/issuer: "le-example-http"
spec:
 tls:
    - hosts:
        - example2.david.orangeadd.com
      secretName: tls-example-ingress-http
 rules:
    - host: example2.david.orangeadd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 8080
